--- a/AdvanceCalculator.html
+++ b/AdvanceCalculator.html
@@ -27,11 +27,11 @@
                             <button id="add-nine" class="add-btn">9</button>
                             <button id="add-plus" class="add-btn">+</button>
                             <button id="add-up" class="add-btn"><img src="./assets/style/images/^.png" alt=""></button>
-                            <button id="add-cancle" class="add-btn"><img src="./assets/style/images/Group 1.png"
+                            <button id="add-cancel" class="add-btn"><img src="./assets/style/images/Group 1.png"
                                     alt=""></button>
                         </div>
                         <div class="my-1 d-flex justify-content-between align-items-center">
-                            <button id="add-for" class="add-btn">4</button>
+                            <button id="add-four" class="add-btn">4</button>
                             <button id="add-five" class="add-btn">5</button>
                             <button id="add-six" class="add-btn">6</button>
                             <button id="add-minus" class="add-btn">-</button>
@@ -59,8 +59,6 @@
                                 <button id="add-equlto" class="w-100 h-100 add-btn">=</button>
                             </div>
                         </div>
-
-
                         <p class="mt-4 pt-2 opacity-50 text-black">Previous values</p>
                     </div>
                 </div>
@@ -76,16 +74,37 @@
 
     <script>
         // HERE WE GET ELEMENT  \
+        const addzero = document.getElementById("add-zero");
+        const adddoublezero = document.getElementById("add-doublezero");
+        const addone = document.getElementById("add-one");
+        const addtwo = document.getElementById("add-two");
+        const addthree = document.getElementById("add-three");
+        const addfour = document.getElementById("add-four");
+        const addfive = document.getElementById("add-five");
+        const addsix = document.getElementById("add-six");
         const addseven = document.getElementById("add-seven");
         const addeight = document.getElementById("add-eight");
         const addnine = document.getElementById("add-nine");
         const addplus = document.getElementById("add-plus");
+        const addclear = document.getElementById("add-clear");
+        const addminus = document.getElementById("add-minus");
+        const multiply = document.getElementById("add-multiply");
+        const devide = document.getElementById("add-divide");
         const addup = document.getElementById("add-up");
-        const addcancle = document.getElementById("add-cancle");
+        const addcancel = document.getElementById("add-cancel");
         const addequlto = document.getElementById("add-equlto");
 
         const result = document.getElementById("get-number2");
 
+        addzero.addEventListener("click", function () {
+            result.innerHTML += 0;
+        });
+        adddoublezero.addEventListener("click", function () {
+            result.innerHTML += "00";
+        });
+        addnine.addEventListener("click", function () {
+            result.innerHTML += 9;
+        });
         addeight.addEventListener("click", function () {
             result.innerHTML += 8;
         });
@@ -93,14 +112,50 @@
         addseven.addEventListener("click", function () {
             result.innerHTML += 7;
         });
-
+        addsix.addEventListener("click", function () {
+            result.innerHTML += 6;
+        });
+        addfive.addEventListener("click", function () {
+            result.innerHTML += 5;
+        });
+        addfour.addEventListener("click", function () {
+            result.innerHTML += 4;
+        });
+        addthree.addEventListener("click", function () {
+            result.innerHTML += 3;
+        });
+        addtwo.addEventListener("click", function () {
+            result.innerHTML += 2;
+        });
+        addone.addEventListener("click", function () {
+            result.innerHTML += 1;
+        });
+        multiply.addEventListener("click", function () {
+            result.innerHTML += "*";
+        });
+        devide.addEventListener("click", function () {
+            result.innerHTML += "/";
+        });
         addplus.addEventListener("click", function () {
             result.innerHTML += "+";
+        });
+
+        addminus.addEventListener("click", function () {
+            result.innerHTML += "-";
         });
 
         addequlto.addEventListener("click", function () {
             console.log(result, "result")
             result.innerHTML = eval(result.innerHTML);
+        });
+
+        addclear.addEventListener("click", function () {
+            console.log(result, "result")
+            result.innerHTML = 0;
+        });
+
+        addcancel.addEventListener("click", function () {
+            result.innerHTML = result.innerHTML.slice(0, -1);
         });
     </script>
 </body>
