--- a/simple-calculator.html
+++ b/simple-calculator.html
@@ -78,6 +78,9 @@
 
       answer.innerHTML = "Answer";
     });
+    clearbtn.addEventListener("click", function () {
+      firstValue.innerHTML = "(value)";
+    });
   </script>
 </body>
 
