--- a/AdvanceCalculator.html
+++ b/AdvanceCalculator.html
@@ -48,7 +48,7 @@
               </div>
               <div class="d-flex justify-content-between">
                 <div>
-                  <div class=" ">
+                  <div>
                     <button id="add-one" class="add-btn">1</button>
                     <button id="add-two" class="add-btn">2</button>
                     <button id="add-three" class="add-btn">3</button>
